# external_resources

./: .gitignore  README.rst  pyproject.toml  registry.yaml
src/external_resources/: lockfile.py  main.py  operations.py  options.py  registry.py  requirements.py
src/external_resources/templatetags/: extres.py
