[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[project]
name = "external-resources"
version = "0.2.0"
description = "Fetch and deploy external resources (CSS, JS, Fonts) for web services"
keywords = ["web", "css", "js", "fonts", "resources", "installation"]
readme = "README.rst"
requires-python = ">= 3.10"
authors = [
  {name = "Detlef Lannert", email = "detlef@lannert.de"},
]
maintainers = [
  {name = "Detlef Lannert", email = "detlef@lannert.de"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Build Tools",
  "Typing :: Typed",
]

dependencies = [
  "attrs",
  "cattrs",
  "cyclopts",
  "httpx",
  "msgspec",
  "pyyaml",
  "packaging",
  "pyproject-parser",
  "rich",
]

[project.optional-dependencies]
dev = [
  "ipython",
  "invoke",
  "mypy",
  "pyproject-parser[cli]",
  "pytest",
  "types-invoke",
  "types-PyYAML",
]

[project.scripts]
extres = "external_resources.extres:app"

[project.urls]
Homepage = "https://github.com/detlefla/external_resources"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/detlefla/external_resources.git"
Issues = "https://github.com/detlefla/external_resources/issues"
Changelog = "https://github.com/detlefla/external_resources/blob/master/CHANGELOG.md"


# [tool.ext_resources]
# resource_index = "external_resources.yaml"
# requires = [
#   "bootstrap",
#   "htmx == 1.9.10",
# ]

[tool.ruff]
ignore = ["F401", "F405"]
line-length = 100
target-version = "py310"
task-tags = ["XXX"]
extend-exclude = ["migrations"]

[tool.ruff.per-file-ignores]
# "filename" = [list of codes]

[tool.uv]
package = true
